First Release: version 0.0.1
Fixed #2, Fixed #3
Also moved images to resources for better performance.
Added jars custom of javapackager that supports appArgs, see
https://github.com/bleuthoot-sven/JavaPackager